objects/Sales_Territory_User_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Team_Role__c</fullName>
        <label>Partner Portal Role</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Lead Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_to_Account_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add to Account Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <description>This field will display the 18-character case sensitive ID in application reports.</description>
        <formula>Id &amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; 
MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <description>R2 : This fields is informational only.</description>
        <inlineHelpText>Informational Only</inlineHelpText>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>R2 : This fields is informational only.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Record with ISActive checked signifies User&apos;s present in Group.</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Or_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Or Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Eligible_Status__c</fullName>
        <formula>TEXT( User__r.Renewal_Eligible_Status__c )</formula>
        <label>Renewal Eligible Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>User__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesTUserKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SalesTerrUserKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Territory Short Name</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Sales Territory User Assignments</relationshipLabel>
        <relationshipName>Sales_Territory_User_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <formula>User__r.Proudct_speciality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Specialty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <formula>TEXT(User__r.Adoption_Role_Type__c)</formula>
        <label>User Role Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Country__c</fullName>
        <formula>TEXT(Sales_Territory__r.MyComp_Territory_Country__c)</formula>
        <label>Territory Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Region__c</fullName>
        <formula>TEXT(Sales_Territory__r.MyComp_Territory_Region__c)</formula>
        <label>Territory Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <formula>User__r.Email</formula>
        <label>User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Territory_User_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>countTer__c</fullName>
        <defaultValue>&quot;one&quot;</defaultValue>
        <label>countTer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Sales Territory User Assignment</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Territory User Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Territory User Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Team_requires_Account_Team_Role</fullName>
        <active>false</active>
        <errorConditionFormula>Sales_Territory__r.IsPartner__c = FALSE &amp;&amp; Add_to_Account_Team__c = TRUE  &amp;&amp;  
ISBLANK(text(Account_Team_Role__c))</errorConditionFormula>
        <errorMessage>Add to Account Team requires an Account Team Role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AddToAccountTeamUncheckForInactiveRecord</fullName>
        <active>true</active>
        <description>If record is marked as Inactive Add To Account Team must be unchecked.</description>
        <errorConditionFormula>AND(ISCHANGED(IsActive__c), (IsActive__c =false), (Add_to_Account_Team__c = True))</errorConditionFormula>
        <errorMessage>If record is marked as Inactive &apos;Add To Account Team&apos; must be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Territory_User_Assignment_Rule</fullName>
        <active>true</active>
        <description>If record is marked as Partner Territory &apos;Add To Account Team&apos; must be unchecked.</description>
        <errorConditionFormula>Sales_Territory__r.IsPartner__c = TRUE &amp;&amp; Add_to_Account_Team__c = TRUE</errorConditionFormula>
        <errorDisplayField>Account_Team_Role__c</errorDisplayField>
        <errorMessage>If record is marked as Partner Territory &apos;Add To Account Team&apos; must be unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STUserAssignmentRecordUpdateValidation</fullName>
        <active>true</active>
        <description>Only IsActive__c, Account_Team_Role__c, Add_to_Account_Team__c, Effective_End_Date__c, Effective_Start_Date__c can be updated.</description>
        <errorConditionFormula>AND (!ISNEW() ,(OR(ISCHANGED(Sales_Territory__c),  ISCHANGED(User__c))))</errorConditionFormula>
        <errorMessage>Sales Territory &amp; User can not be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Team_Role_requires_Add_to_Account_Team</fullName>
        <active>false</active>
        <errorConditionFormula>Sales_Territory__r.IsPartner__c = FALSE  &amp;&amp;  Add_to_Account_Team__c = FALSE &amp;&amp;  
NOT(ISBLANK(text(Account_Team_Role__c)))</errorConditionFormula>
        <errorMessage>Account Team Role requires Add to Account Team to be checked.</errorMessage>
    </validationRules>
</CustomObject>